# NullOverlay

./: .gitignore  CMakeLists.txt  README.md
src/: dllmain.cpp  pch.h
src/config/: mappings.h
src/core/: hooks.cpp  hooks.h  jvm_wrapper.cpp  jvm_wrapper.h  safety_guard.cpp  safety_guard.h
src/modules/: entity_overlay.cpp  entity_overlay.h  module.h  module_manager.cpp  module_manager.h
src/render/: menu.cpp  menu.h  overlay_renderer.cpp  overlay_renderer.h  renderer.cpp  renderer.h
src/sdk/: entity.cpp  entity.h  minecraft.cpp  minecraft.h  world.cpp  world.h
src/util/: logging.cpp  logging.h  math.cpp  math.h
